[package]
name = "noye"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
alto_logger           = { version = "0.3.0", features = ["time"] }
anyhow                = "1.0.28"
futures               = { version = "0.3.4", default-features = false }
headers               = "0.3.2"
log                   = "0.4.8"
mime_guess            = "2.0.3"
once_cell             = "1.3.1"
percent-encoding      = "2.1.0"
rand                  = { version = "0.7.3", features = ["small_rng"] }
reqwest               = { version = "0.10.4", default-features = false, features = ["json", "gzip", "native-tls"] }
rusqlite              = { version = "0.22.0", features = ["bundled"] }
select                = "0.4.3"
serde                 = { version = "1.0.106", features = ["derive"] }
serde_json            = "1.0.51"
simple_duration_parse = { git = "https://github.com/museun/simple_duration_parse" }
template              = { git = "https://github.com/museun/template", features = ["derive", "toml"] }
time                  = { version = "0.2.10", features = ["serde"] }
tokio                 = { version = "0.2.18", features = ["macros", "rt-threaded", "net", "stream", "sync", "io-util", "time"] }
toml                  = "0.5.6"
url                   = "2.1.1"
walkdir               = "2.3.1"
warp                  = { version = "0.2.2", default-features = false }

[dev-dependencies]
httptest   = "0.13.1"
insta      = { version = "0.16.0", features = ["redactions", "glob"] }
tokio      = { version = "0.2.18", features = ["test-util"] }
serde_yaml = "0.8.11"

[patch.crates-io]
mio = { git = "https://github.com/museun/mio", branch = "winapi03" }

[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0

[profile.release.build-override]
opt-level = 0

[profile.release.package.libsqlite3-sys]
opt-level = 0

[profile.release.package.cc]
opt-level = 0

[profile.release.package.syn]
opt-level = 0

[profile.release.package.pest]
opt-level = 0

[profile.release.package.pest_derive]
opt-level = 0

[profile.release.package.serde_derive]
opt-level = 0

[profile.release.package.pin-project]
opt-level = 0

[profile.release.package.pin-project-internal]
opt-level = 0
