[package]
name = "noye"
version = "0.1.0"
authors = [ "museun <museun@outlook.com>" ]
edition = "2018"
license = "0BSD"

[dependencies]
noye_derive = { path = "../noye_derive" }

anyhow = "1.0.26"
chrono = { version = "0.4.10", features = [ "serde" ] }
flexi_logger = "0.14.5"
futures = "0.3.1"
log = "0.4.8"
once_cell = "1.2.0"
regex = "1.3.1"
serde = { version = "1.0.104", features = [ "derive" ] }
toml = { version = "0.5.5", features = [ "preserve_order" ] }
markings = "0.3.2"
surf = "1.0.3"
escaper = "0.1.0"
http = "0.2.0"

[dependencies.tokio]
version = "0.2.6"
features = [
    "blocking",
    "dns",
    "fs",
    "io-driver",
    "io-util",
    "io-std",    
    "net",
    "process",
    "rt-core",
    "rt-util",
    "rt-threaded",
    "stream",
    "sync",
    "time",
]

[features]
verbose_test = []

[dev-dependencies]
flexi_logger = "0.14.5"
tokio-test = "0.2.0"
escaper = "0.1.0"
