[package]
name = "noye"
version = "0.1.0"
authors = [ "museun <museun@outlook.com>" ]
edition = "2018"
license = "0BSD"

[dependencies]
noye_derive = { path = "../noye_derive" }

anyhow = "1.0.26"
chrono = { version = "0.4.10", features = [ "serde" ] }
escaper = "0.1.0"
fern = { version = "0.5.9", features = [ "colored" ] }
futures = "0.3.1"
http = "0.2.0"
log = "0.4.8"
markings = "0.3.2"
once_cell = "1.2.0"
regex = "1.3.1"
serde = { version = "1.0.104", features = [ "derive" ] }
toml = { version = "0.5.5", features = [ "preserve_order" ] }
reqwest = { version = "0.10.0", features = [ "json" ] }

[dependencies.tokio]
version = "0.2.6"
features = [    
    "dns",
    "fs",
    "io-driver",
    "io-util",
    "io-std",    
    "net",    
    "rt-core",
    "rt-util",
    "rt-threaded",
    "stream",
    "sync",    
]

[dev-dependencies]
tokio-test = "0.2.0"
flexi_logger = "0.14.5"
